name:                tgm-breakfast-hs
version:             0.1.0.0
synopsis:            Simple Telegram Bot that tells you what to eat this morning
description:         Please see README.md
homepage:            https://github.com/limouren/tgm-breakfast-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Kenji Pa
maintainer:          limouren@gmail.com
copyright:           2016 Kenji Pa
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tgm-breakfast-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tgm-breakfast-hs
                     , Spock >= 0.11
                     , bytestring
                     , envy
                     , http-client
                     , http-client-tls
                     , mtl
                     , servant-client
                     , telegram-api
                     , text
                     , time
  default-language:    Haskell2010

test-suite tgm-breakfast-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tgm-breakfast-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/limouren/tgm-breakfast-hs
